Lecture 13 - Unit tests

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
     <name>java-intro</name>
     <description>OO Vorlesung java intro</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
