--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <modules>
         <module>plain-java</module>
+        <module>spring-demo</module>
     </modules>
 
     <dependencyManagement>
