--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -10,9 +10,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>ch.stackhub.learnspace</groupId>
+    <groupId>ch.study</groupId>
     <artifactId>spring-demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>spring-demo-one</name>
